Added Create Account form
- Fleshed out the modal for Create Account.
- Wired up relationships for going from the Login modal to Create and back again.

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,6 +6,7 @@
     
     <link rel="stylesheet" href="/css/app.css"/>
     <script src="/js/CustomDialog.js"></script>
+    <script src="/js/CustomCreateAccountForm.js"></script>
     <script src="/js/CustomLoginForm.js"></script>
   </head>
   <body>
