--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1 minimum-scale=1">
     
     <link rel="stylesheet" href="/css/app.css"/>
+    <script src="/js/serializeForm.js"></script>
+    <script src="/js/request.js"></script>
     <script src="/js/CustomDialog.js"></script>
     <script src="/js/CustomCreateAccountForm.js"></script>
     <script src="/js/CustomLoginForm.js"></script>
